<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eceee0">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icono"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/titulo_app"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="40dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/autores1"
        android:id="@+id/autores1"
        android:textStyle="bold"
        android:textSize="19dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/autores2"
        android:id="@+id/autores2"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contacto1"
        android:id="@+id/contacto1"
        android:textStyle="bold"
        android:textSize="19dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:autoLink="email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contacto2"
        android:id="@+id/contacto2"
        android:textSize="17dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:autoLink="email"/>
</LinearLayout>